daemonset/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: daemonset-example
  name: daemonset-example
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 8080
  selector:
    app: daemonset-example
  type: ClusterIP
