daemonset/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: daemonset-example
  name: daemonset-example
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: daemonset-example
    weight: 100
  wildcardPolicy: None
